# processes-and-signals

./: configure.ac
src/: Makefile.am  configure.ac
src/fork/: Makefile.am
src/fork/src/: Makefile.in  a.out  fork1.c
src/redirection/: Makefile.am  file.txt  upper.c  useupper.c
src/signals/: Makefile.am  alarm.c  ctrlc.c  ctrlc2.c
src/system/: Makefile.in  README  configure
src/system/autom4te.cache/: output.1  traces.0  traces.1
src/system/src/: Makefile.am  Makefile.in  a.out  execlp  execlp.c  system1.c  system2.c
src/wait/: Makefile.am  wait.c
src/zombie/: Makefile.am  zombie.c
