dnl Process this file with autoconf to produce a configure script.
AC_INIT([processes], [0.0.2], [pabitraadhikari@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 src/system/Makefile
 src/fork/Makefile
 src/wait/Makefile
])
AC_OUTPUT
